--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-network.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.6/chroma.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-network.min.css" rel="stylesheet" type="text/css" />
 
 	<style type="text/css">
@@ -60,7 +61,9 @@
 							}
 						},
 						label: e.Label,
-						font: { align: 'top' }
+						font: { align: 'top' },
+						color:{color: chroma.random().hex()},
+						value: 5
 					});
 				});
 
