--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 							inherit: 'from',
 							opacity:1.0
 						},
-					}
+					},
+					physics: false
 				};
 				var network = new vis.Network(container, data, options);
 
